deploy/platform/alicloud-alb/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  labels:
    app.kubernetes.io/name: portfolio
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: portfolio
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-enabled: "true"
    alb.ingress.kubernetes.io/healthcheck-protocol: TCP
spec:
  ingressClassName: alb-shared
  rules:
    - http:
        paths:
          - path: /__ENVIRONMENT__/api
            pathType: Prefix
            backend:
              service:
                name: portfolio-api
                port:
                  number: 8000
          - path: /__ENVIRONMENT__
            pathType: Prefix
            backend:
              service:
                name: portfolio-web
                port:
                  number: 8080
